GITForce/src/objects/Diagnostic_Entry__c.object
<CustomObject>
    <description>Diagnostics</description>
    <fields>
        <fullName>Body__c</fullName>
        <description>Body of the diagnostic entry</description>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>LineNumber</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StackTrace__c</fullName>
        <label>StackTrace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Diagnostic Entry</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DE-{0000}</displayFormat>
        <label>Diagnostic Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Diagnostic Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>